Tech Portfolio Updates - 10.11.25

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <!-- link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet" -->
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -330,8 +329,7 @@
                 <div class="portfolio-info">
                   <h4>Reddit API Project</h4>
                   <p>A tool that monitors Reddit threads and user posts to track successful career outcomes from people I've
-                    advised. It uses sentiment analysis and keyword detection to identify milestones like job offers,
-                    promotions, and career changes. Project coming soon...</p>
+                    advised. Project coming soon...</p>
                   <a href="assets/img/portfolio/reddit-api-project.png" title="Reddit API Project"
                     data-gallery="portfolio-gallery-apis" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
@@ -352,16 +350,14 @@
             </div><!-- End Portfolio Item -->
     
             <!-- Portfolio Item 3 -->
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-apis">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/personal-dashboard-project.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/api-data-pipline-project.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>API Data Pipeline Project</h4>
-                  <p>A data pipeline that tracks and logs API usage, performance metrics, and anomalies. It includes
-                    real-time dashboards and alerting mechanisms to ensure system reliability and transparency. Project
-                    coming soon...</p>
-                  <a href="assets/img/portfolio/personal-dashboard-project.png" title="API Data Pipeline Project"
-                    data-gallery="portfolio-gallery-coding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>A data pipeline that tracks and logs API usage, performance metrics, and anomalies. Project coming soon...</p>
+                  <a href="assets/img/portfolio/api-data-pipline-project.png" title="API Data Pipeline Project"
+                    data-gallery="portfolio-gallery-apis" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
