Services Updates CSS Revision - 10.11.25

--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
     </section><!-- /About Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section dark-background" style="background:url('assets/img/Nick_Fancher_Unplash_Cyberbunk2077.png') no-repeat center center / cover !important;
-                       background-size:cover;" alt="" data-aos="fade-in">
+    <section id="services" class="services section dark-background" data-aos="fade-in">
 
       <div class="container">
         <!-- Section Title -->
