scheek100-honeypotSpamProtection-HTML-10.11.25

--- a/index.html
+++ b/index.html
@@ -556,6 +556,9 @@
                   <textarea name="message" class="form-control" rows="6" placeholder="Message" required></textarea>
                 </div>
 
+<!-- Honeypot field (spam protection) -->
+<input type="text" name="_gotcha" style="display:none">
+
                 <!-- Status Messages -->
                 <div class="col-md-12 text-center">
                   <div class="loading" style="display:none;">Loading...</div>
