Resume and Testimonials Updates 2 - 10.11.25

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 </section><!-- /Services Section -->
 
     <!-- Resume Section -->
-    <section id="resume" class="resume section dark-background" style="background:url('assets/img/Nick_Fancher_Unplash_Cyberbunk2077.png') no-repeat center center / cover !important; background-size:cover;" alt="">
+    <section id="resume" class="resume section dark-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -451,7 +451,7 @@
     <!-- End Writing Section -->
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials dark-background" data-aos="fade-in">
+    <section id="testimonials" class="testimonials section-black" data-aos="fade-in">
       <div class="container">
 
         <!-- Section Title  -->
