--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section><!-- /About Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section-black" data-aos="fade-in">
+    <section id="services" class="services section dark-background"style="background:url('assets/img/Nick_Fancher_Unplash_Cyberbunk2077.png') no-repeat center center / cover !important; background-size:cover;" alt="" data-aos="fade-in">
 
       <div class="container">
         <!-- Section Title -->
@@ -201,7 +201,7 @@
 </section><!-- /Services Section -->
 
     <!-- Resume Section -->
-    <section id="resume" class="resume section dark-background">
+    <section id="resume" class="resume section-black">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
