Writing and Portfolio Revisions - 10.12.25

--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
     <!-- /Resume Section -->
 
     <!-- Tech Portfolio Section -->
-    <section id="portfolio" class="portfolio dark-background" style="background:url('assets/img/technology_particle_background.jpg') no-repeat center center / cover !important;
-                               background-size:cover;" alt="" data-aos="fade-in">
+    <section id="portfolio" class="portfolio section-black" data-aos="fade-in">
     
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -434,8 +433,16 @@
           </div>
         </div>
     
-      </div><!-- End of Tech Portfolio Section-->
+      </div>
+    </section><!-- End Tech Portfolio Section -->
 
+    <!-- Writing Section -->
+    <section id="writing" class="writing section-black py-5">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h1>WRITING</h1>
+        <h2 class="framed-subtitle">Recent published work on Medium — expand to preview each article.</h2>
+      </div>
       <!-- Blog Container -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
