Tech Portfolio CSS Revised v02 - 10.12.25

--- a/index.html
+++ b/index.html
@@ -348,27 +348,18 @@
       <div class="animated bounceInUp delay-1s">
     
         <!-- Featured Project -->
-        <div class="row" id="work-row">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-2s">
-            <center>
-              <div class="work-hero">
-                <iframe title="Healthcare Data Breach Map" aria-label="Map" src="https://www.datawrapper.de/_/ZT1co/"
-                  scrolling="no" frameborder="0" style="width:100%; min-width:600px; border:none; height:1000px;">
-                </iframe>
-              </div>
-            </center>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="work-des">
+        <div class="row justify-content-center align-items-center" id="work-row">
+          <div class="col-lg-8">
+            <figure class="work-hero">
+              <iframe src="https://www.datawrapper.de/_/ZT1co/"
+                style="width:100%; height:480px; border:none; border-radius:10px;" loading="lazy"
+                title="Healthcare Data Breach Map"></iframe>
+              <figcaption class="sr-only">Interactive choropleth map of U.S. healthcare data breaches.</figcaption>
+            </figure>
+            <div class="work-feature-text text-center mt-4">
               <h1>Healthcare Data Breach Map</h1>
-              <p>U.S. States and territories choropleth map visualizing healthcare data breaches from Oct 2024 - 2025 by
+              <p>U.S. States and territories choropleth map visualizing healthcare data breaches from Oct 2024–2025 by
                 state, built with Datawrapper, Google Sheets, and pivot table.</p>
-              <div class="technologies">
-                <h2>Technologies Used</h2>
-                <span class="tech-stack">Datawrapper</span>
-                <span class="tech-stack">Google Sheets</span>
-                <span class="tech-stack">Pivot Table</span>
-              </div>
             </div>
           </div>
         </div>
