Tech Projects Section Revised v06 -10.12.25

--- a/index.html
+++ b/index.html
@@ -347,90 +347,48 @@
           projects. More projects coming soon!</h2>
       </div><!-- End Section Title -->
 
-      <!--Content-->
-      <div class="animated bounceInUp delay-1s">
+ <section id="portfolio" class="portfolio-section" data-aos="fade-in">
 
-        <!-- Featured Project -->
-        <div class="row justify-content-center align-items-center" id="work-row">
-          <div class="col-lg-8">
-            <figure class="work-hero">
-              <!-- Datawrapper embed -->
-              <iframe title="Healthcare Data Breaches by State (Total Number, October 2024 - October 2025)"
-                aria-label="Choropleth map" id="datawrapper-chart-ZT1co" src="https://datawrapper.dwcdn.net/ZT1co/1/"
-                scrolling="no" frameborder="0" style="width: 100%; border: none; border-radius: 10px;" height="480"
-                data-external="1">
-              </iframe>
-            </figure>
-            <div class="work-feature-text text-center mt-4">
-              <h1>Healthcare Data Breach Map</h1>
-              <p>U.S. States and territories choropleth map visualizing healthcare data breaches from Oct 2024–2025 by
-                state, built with Datawrapper, Google Sheets, and pivot table.</p>
-            </div>
-          </div>
-        </div>
+<!-- Project 1 Row 1 -->
+  <div class="portfolio-item" data-aos="fade-up">
+    <iframe title="Healthcare Data Breaches by State"
+      src="https://datawrapper.dwcdn.net/ZT1co/1/"
+      frameborder="0"
+      scrolling="no"></iframe>
+    <div class="portfolio-content">
+      <h3>Healthcare Data Breach Map</h3>
+      <p>U.S. states choropleth map showing healthcare data breaches (Oct 2024–2025), built using Datawrapper and Google Sheets.</p>
+    </div>
+    <div class="tags">
+      <span>Datawrapper</span><span>Google Sheets</span><span>Visualization</span>
+    </div>
+  </div>
 
-        <!-- Row 1 -->
-        <div class="row work-double-row">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
-            <div class="work-hero-card">
-              <img class="work-card-hero-img" src="assets/img/portfolio/api-project-placeholder.jpg"
-                alt="API Data Pipeline">
-              <h1>API Monitoring Data Pipeline</h1>
-              <div id="work-text">API</div>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
-            <div class="work-hero-card">
-              <img class="work-card-hero-img" src="assets/img/portfolio/api-project-placeholder.jpg"
-                alt="Reddit Resume Impact Tracking">
-              <h1>Reddit Resume Impact Tracking</h1>
-              <div id="work-text">API</div>
-            </div>
-          </div>
-        </div>
+<!-- Project 2 Row 2 -->
+  <div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
+    <img src="assets/img/portfolio/api-project-placeholder.jpg" alt="API Monitoring Data Pipeline">
+    <div class="portfolio-content">
+      <h3>API Monitoring Data Pipeline</h3>
+      <p>Real-time feed tracking and data QA pipeline for partner integrations.</p>
+    </div>
+    <div class="tags">
+      <span>Python</span><span>API</span><span>Automation</span>
+    </div>
+  </div>
 
-        <!-- Row 2 -->
-        <div class="row work-double-row">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
-            <div class="work-hero-card">
-              <img class="work-card-hero-img" src="assets/img/portfolio/datavisual-placeholder.jpg"
-                alt="Healthcare Data Breach Case Studies">
-              <h1>Healthcare Data Breach Case Studies</h1>
-              <div id="work-text">DATA VISUALIZATION</div>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
-            <div class="work-hero-card">
-              <img class="work-card-hero-img" src="assets/img/portfolio/datavisual-placeholder.jpg"
-                alt="Untitled Project 1">
-              <h1>Untitled Project 1</h1>
-              <div id="work-text">DATA VISUALIZATION</div>
-            </div>
-          </div>
-        </div>
+<!-- Project 3 Row 3 -->
+  <div class="portfolio-item" data-aos="fade-up" data-aos-delay="200">
+    <img src="assets/img/portfolio/api-project-placeholder.jpg" alt="Reddit Resume Impact Tracking">
+    <div class="portfolio-content">
+      <h3>Reddit Resume Impact Tracking</h3>
+      <p>Scripted Reddit API monitor visualizing user success stories and engagement metrics.</p>
+    </div>
+    <div class="tags">
+      <span>API</span><span>Data</span><span>Python</span>
+    </div>
+  </div>
 
-        <!-- Row 3 -->
-        <div class="row work-double-row">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
-            <div class="work-hero-card">
-              <img class="work-card-hero-img" src="assets/img/portfolio/automation-placeholder.jpg"
-                alt="Untitled Project 2">
-              <h1>Untitled Project 2</h1>
-              <div id="work-text">AUTOMATION</div>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
-            <div class="work-hero-card">
-              <img class="work-card-hero-img" src="assets/img/portfolio/automation-placeholder.jpg"
-                alt="Untitled Project 3">
-              <h1>Untitled Project 3</h1>
-              <div id="work-text">AUTOMATION</div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Tech Portfolio Section -->
+</section><!-- End Tech Portfolio Section -->
 
     <!-- Writing Section -->
     <section id="writing" class="writing section-black py-5">
