Datawrapper Map Fixes - HTML - 10.12.25

--- a/index.html
+++ b/index.html
@@ -352,15 +352,19 @@
 <!-- Project 1 Row 1 -->
   <div class="portfolio-item" data-aos="fade-up">
     <iframe title="Healthcare Data Breaches by State"
+aria-label="Choropleth map"
+    id="datawrapper-chart-ZT1co"
       src="https://datawrapper.dwcdn.net/ZT1co/1/"
       frameborder="0"
-      scrolling="no"></iframe>
+      scrolling="no"
+      style="width:100%; border:none;   border-radius:14px; background:#fff;"
+     height="600"></iframe>
     <div class="portfolio-content">
       <h3>Healthcare Data Breach Map</h3>
       <p>U.S. states choropleth map showing healthcare data breaches (Oct 2024–2025), built using Datawrapper and Google Sheets.</p>
     </div>
     <div class="tags">
-      <span>Datawrapper</span><span>Google Sheets</span><span>Visualization</span>
+      <span>Datawrapper</span><span>Google Sheets</span>
     </div>
   </div>
 
@@ -698,7 +702,8 @@
       }
     });
   </script>
-  <!-- Script for Featured Project Datawrapper-->
+
+  <!-- Script Datawrapper/Data Vis Projects-->
   <script type="text/javascript">
     window.addEventListener("message", function (event) {
       if (event.data["datawrapper-height"] !== undefined) {
