scheek100-coming-soon-project-pics - 10.12.25

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
 <!-- Project 2 Row 2 -->
   <div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
-    <img src="assets/img/portfolio/api-project-placeholder.jpg" alt="API Monitoring Data Pipeline">
+    <img src="assets/img/portfolio/tron-coming-soon-placeholder.png" alt="API Monitoring Data Pipeline">
     <div class="portfolio-content">
       <h3>API Monitoring Data Pipeline</h3>
       <p>Real-time feed tracking and data QA pipeline for partner integrations.</p>
@@ -380,7 +380,7 @@
 
 <!-- Project 3 Row 3 -->
   <div class="portfolio-item" data-aos="fade-up" data-aos-delay="200">
-    <img src="assets/img/portfolio/api-project-placeholder.jpg" alt="Reddit Resume Impact Tracking">
+    <img src="assets/img/portfolio/tron-coming-soon-placeholder.png" alt="Reddit Resume Impact Tracking">
     <div class="portfolio-content">
       <h3>Reddit Resume Impact Tracking</h3>
       <p>Scripted Reddit API monitor visualizing user success stories and engagement metrics.</p>
