--- a/index.html
+++ b/index.html
@@ -166,31 +166,31 @@
         <!-- Services Grid -->
         <div class="services-grid" data-aos="fade-up">
           <!-- Service Card 1 -->
-            <div class="service-card">
-              <i class="bi bi-gear-fill"></i>
-              <h3>Integration & Architecture</h3>
-              <p>Secure, scalable, and well-documented systems with GraphQL, REST, and CDN optimization.</p>
-            </div>
+          <div class="service-card">
+            <i class="bi bi-gear-fill"></i>
+            <h3>Integration & Architecture</h3>
+            <p>Secure, scalable, and well-documented systems with GraphQL, REST, and CDN optimization.</p>
+          </div>
           <!-- Service Card 2 -->
-            <div class="service-card">
-              <i class="bi bi-journal-text"></i>
-              <h3>Science & Tech Writing</h3>
-              <p>Bridging scientific insight and technical fluency to make complex concepts clear and accessible.</p>
-            </div>
-            <!-- Service Card 3 -->
-            <div class="service-card">
-              <i class="bi bi-lightbulb-fill"></i>
-              <h3>Mentorship & Strategy</h3>
-              <p>Guiding early-career technologists and shaping scalable, ethical systems with narrative clarity.</p>
-            </div>
-            <!-- Service Card 4 -->
-            <div class="service-card">
-              <i class="bi bi-lock-fill"></i>
-              <h3>Security & Compliance</h3>
-              <p>Applying OAuth 2.0, API hardening, and privacy-first design to safeguard integrations and data.</p>
-            </div>
-          </div><!--End Services Grid -->
-        </div>
+          <div class="service-card">
+            <i class="bi bi-journal-text"></i>
+            <h3>Science & Tech Writing</h3>
+            <p>Bridging scientific insight and technical fluency to make complex concepts clear and accessible.</p>
+          </div>
+          <!-- Service Card 3 -->
+          <div class="service-card">
+            <i class="bi bi-lightbulb-fill"></i>
+            <h3>Mentorship & Strategy</h3>
+            <p>Guiding early-career technologists and shaping scalable, ethical systems with narrative clarity.</p>
+          </div>
+          <!-- Service Card 4 -->
+          <div class="service-card">
+            <i class="bi bi-lock-fill"></i>
+            <h3>Security & Compliance</h3>
+            <p>Applying OAuth 2.0, API hardening, and privacy-first design to safeguard integrations and data.</p>
+          </div>
+        </div><!--End Services Grid -->
+      </div>
     </section><!-- /Services Section -->
 
     <!-- Resume Section -->
@@ -645,45 +645,56 @@
     });
   </script>
 
-  <!-- Contact Section JS Script -->
+  <!-- ======= Contact Section JS Script [Without Formspree Redirect] ======= -->
   <script>
-    const form = document.getElementById('contact-form');
-    const loading = form.querySelector('.loading');
-    const errorMessage = form.querySelector('.error-message');
-    const sentMessage = form.querySelector('.sent-message');
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById('contact-form');
+      if (!form) return; // safety check
 
-    form.addEventListener('submit', async function (e) {
-      e.preventDefault(); // stop the redirect
-      loading.style.display = 'block';
-      errorMessage.style.display = 'none';
-      sentMessage.style.display = 'none';
+      const loading = form.querySelector('.loading');
+      const errorMessage = form.querySelector('.error-message');
+      const sentMessage = form.querySelector('.sent-message');
 
-      try {
-        const response = await fetch(form.action, {
-          method: 'POST',
-          body: new FormData(form),
-          headers: { 'Accept': 'application/json' }
-        });
+      form.addEventListener('submit', async function (e) {
+        e.preventDefault(); // stop redirect
+        if (loading) loading.style.display = 'block';
+        if (errorMessage) errorMessage.style.display = 'none';
+        if (sentMessage) sentMessage.style.display = 'none';
 
-        loading.style.display = 'none';
+        try {
+          const response = await fetch(form.action, {
+            method: 'POST',
+            body: new FormData(form),
+            headers: { 'Accept': 'application/json' }
+          });
 
-        if (response.ok) {
-          sentMessage.style.display = 'block';
-          form.reset();
-        } else {
-          const data = await response.json();
-          if (data.errors) {
-            errorMessage.textContent = data.errors.map(err => err.message).join(', ');
+          if (loading) loading.style.display = 'none';
+
+          if (response.ok) {
+            if (sentMessage) {
+              sentMessage.style.display = 'block';
+              sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
+            }
+            form.reset();
           } else {
-            errorMessage.textContent = "Oops! There was a problem submitting your form.";
+            const data = await response.json();
+            if (errorMessage) {
+              if (data.errors) {
+                errorMessage.textContent = data.errors.map(err => err.message).join(', ');
+              } else {
+                errorMessage.textContent = "Oops! There was a problem submitting your form.";
+              }
+              errorMessage.style.display = 'block';
+            }
           }
-          errorMessage.style.display = 'block';
+        } catch (error) {
+          if (loading) loading.style.display = 'none';
+          if (errorMessage) {
+            errorMessage.textContent = "Network error — please try again later.";
+            errorMessage.style.display = 'block';
+          }
         }
-      } catch (error) {
-        loading.style.display = 'none';
-        errorMessage.textContent = "Network error — please try again later.";
-        errorMessage.style.display = 'block';
-      }
+      });
     });
   </script>
 
