--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
             <div class="col-lg-6">
 
               <!-- Contact Form -->
-              <form action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form">
+              <form id="contact-form" action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form" novalidate>
                 <div class="row gy-4">
 
                   <!-- Name -->
@@ -644,59 +644,49 @@
       easing: 'ease-in-out',
     });
   </script>
+<!-- ======= Contact Section JS Script [Without Formspree Redirect] ======= -->
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const form = document.getElementById('contact-form');
+    if (!form) return; // safety check
 
-  <!-- ======= Contact Section JS Script [Without Formspree Redirect] ======= -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const form = document.getElementById('contact-form');
-      if (!form) return; // safety check
+    const loading = form.querySelector('.loading');
+    const errorMessage = form.querySelector('.error-message');
+    const sentMessage = form.querySelector('.sent-message');
 
-      const loading = form.querySelector('.loading');
-      const errorMessage = form.querySelector('.error-message');
-      const sentMessage = form.querySelector('.sent-message');
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault(); // stop redirect
+      loading.style.display = 'block';
+      errorMessage.style.display = 'none';
+      sentMessage.style.display = 'none';
 
-      form.addEventListener('submit', async function (e) {
-        e.preventDefault(); // stop redirect
-        if (loading) loading.style.display = 'block';
-        if (errorMessage) errorMessage.style.display = 'none';
-        if (sentMessage) sentMessage.style.display = 'none';
+      const formData = new FormData(form);
 
-        try {
-          const response = await fetch(form.action, {
-            method: 'POST',
-            body: new FormData(form),
-            headers: { 'Accept': 'application/json' }
-          });
+      try {
+        const response = await fetch(form.action, {
+          method: 'POST',
+          body: formData,
+          headers: { 'Accept': 'application/json' }
+        });
 
-          if (loading) loading.style.display = 'none';
+        loading.style.display = 'none';
 
-          if (response.ok) {
-            if (sentMessage) {
-              sentMessage.style.display = 'block';
-              sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
-            }
-            form.reset();
-          } else {
-            const data = await response.json();
-            if (errorMessage) {
-              if (data.errors) {
-                errorMessage.textContent = data.errors.map(err => err.message).join(', ');
-              } else {
-                errorMessage.textContent = "Oops! There was a problem submitting your form.";
-              }
-              errorMessage.style.display = 'block';
-            }
-          }
-        } catch (error) {
-          if (loading) loading.style.display = 'none';
-          if (errorMessage) {
-            errorMessage.textContent = "Network error — please try again later.";
-            errorMessage.style.display = 'block';
-          }
+        if (response.ok) {
+          sentMessage.style.display = 'block';
+          sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
+          form.reset();
+        } else {
+          errorMessage.textContent = "Oops! There was a problem submitting your form.";
+          errorMessage.style.display = 'block';
         }
-      });
+      } catch (error) {
+        loading.style.display = 'none';
+        errorMessage.textContent = "Network error — please try again later.";
+        errorMessage.style.display = 'block';
+      }
     });
-  </script>
+  });
+</script>
 
 </body>
 
