--- a/index.html
+++ b/index.html
@@ -541,7 +541,8 @@
             <div class="col-lg-6">
 
               <!-- Contact Form -->
-              <form id="contact-form" action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form" novalidate>
+              <form id="contact-form" action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form"
+                novalidate>
                 <div class="row gy-4">
 
                   <!-- Name -->
@@ -570,18 +571,19 @@
                   <!-- Status Messages -->
                   <div class="col-md-12 text-center">
                     <div class="loading" style="display:none;">Loading...</div>
-                    <div class="error-message" style="display:none; color:#ff4d4d;"></div>
-                    <div class="sent-message" style="display:none; color:#39ff14;">Your message has been sent. Thank
-                      you!
-                    </div>
+                    <div class="error-message" style="display:none;"></div>
+                    <div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
                     <button type="submit" class="btn btn-neon btn-lg">Send Message</button>
                   </div>
 
+                  <button type="submit" class="btn btn-neon btn-lg">Send Message</button>
                 </div>
-              </form>
 
             </div>
+            </form>
+
           </div>
+        </div>
         </div>
       </section>
   </main>
@@ -644,49 +646,49 @@
       easing: 'ease-in-out',
     });
   </script>
-<!-- ======= Contact Section JS Script [Without Formspree Redirect] ======= -->
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const form = document.getElementById('contact-form');
-    if (!form) return; // safety check
+  <!-- ======= Contact Section JS Script [Without Formspree Redirect] ======= -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById('contact-form');
+      if (!form) return; // safety check
 
-    const loading = form.querySelector('.loading');
-    const errorMessage = form.querySelector('.error-message');
-    const sentMessage = form.querySelector('.sent-message');
+      const loading = form.querySelector('.loading');
+      const errorMessage = form.querySelector('.error-message');
+      const sentMessage = form.querySelector('.sent-message');
 
-    form.addEventListener('submit', async function (e) {
-      e.preventDefault(); // stop redirect
-      loading.style.display = 'block';
-      errorMessage.style.display = 'none';
-      sentMessage.style.display = 'none';
+      form.addEventListener('submit', async function (e) {
+        e.preventDefault(); // stop redirect
+        loading.style.display = 'block';
+        errorMessage.style.display = 'none';
+        sentMessage.style.display = 'none';
 
-      const formData = new FormData(form);
+        const formData = new FormData(form);
 
-      try {
-        const response = await fetch(form.action, {
-          method: 'POST',
-          body: formData,
-          headers: { 'Accept': 'application/json' }
-        });
+        try {
+          const response = await fetch(form.action, {
+            method: 'POST',
+            body: formData,
+            headers: { 'Accept': 'application/json' }
+          });
 
-        loading.style.display = 'none';
+          loading.style.display = 'none';
 
-        if (response.ok) {
-          sentMessage.style.display = 'block';
-          sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
-          form.reset();
-        } else {
-          errorMessage.textContent = "Oops! There was a problem submitting your form.";
+          if (response.ok) {
+            sentMessage.style.display = 'block';
+            sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
+            form.reset();
+          } else {
+            errorMessage.textContent = "Oops! There was a problem submitting your form.";
+            errorMessage.style.display = 'block';
+          }
+        } catch (error) {
+          loading.style.display = 'none';
+          errorMessage.textContent = "Network error — please try again later.";
           errorMessage.style.display = 'block';
         }
-      } catch (error) {
-        loading.style.display = 'none';
-        errorMessage.textContent = "Network error — please try again later.";
-        errorMessage.style.display = 'block';
-      }
+      });
     });
-  });
-</script>
+  </script>
 
 </body>
 
