--- a/index.html
+++ b/index.html
@@ -570,20 +570,19 @@
 
                   <!-- Status Messages -->
                   <div class="col-md-12 text-center">
-                    <div class="loading" style="display:none;">Loading...</div>
-                    <div class="error-message" style="display:none;"></div>
-                    <div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
+                    <div class="status-messages">
+                      <div class="loading" style="display:none;">Loading...</div>
+                      <div class="error-message" style="display:none;"></div>
+                      <div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
+                    </div>
                     <button type="submit" class="btn btn-neon btn-lg">Send Message</button>
                   </div>
 
-                  <button type="submit" class="btn btn-neon btn-lg">Send Message</button>
                 </div>
+              </form>
 
             </div>
-            </form>
-
           </div>
-        </div>
         </div>
       </section>
   </main>
@@ -646,49 +645,50 @@
       easing: 'ease-in-out',
     });
   </script>
-  <!-- ======= Contact Section JS Script [Without Formspree Redirect] ======= -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const form = document.getElementById('contact-form');
-      if (!form) return; // safety check
 
-      const loading = form.querySelector('.loading');
-      const errorMessage = form.querySelector('.error-message');
-      const sentMessage = form.querySelector('.sent-message');
+<!-- ======= Contact Section JS Script ======= -->
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const form = document.getElementById('contact-form');
+    if (!form) return;
 
-      form.addEventListener('submit', async function (e) {
-        e.preventDefault(); // stop redirect
-        loading.style.display = 'block';
-        errorMessage.style.display = 'none';
-        sentMessage.style.display = 'none';
+    const loading = form.querySelector('.loading');
+    const errorMessage = form.querySelector('.error-message');
+    const sentMessage = form.querySelector('.sent-message');
 
-        const formData = new FormData(form);
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault(); // stop redirect
+      loading.style.display = 'block';
+      errorMessage.style.display = 'none';
+      sentMessage.style.display = 'none';
 
-        try {
-          const response = await fetch(form.action, {
-            method: 'POST',
-            body: formData,
-            headers: { 'Accept': 'application/json' }
-          });
+      const formData = new FormData(form);
 
-          loading.style.display = 'none';
+      try {
+        const response = await fetch(form.action, {
+          method: 'POST',
+          body: formData,
+          headers: { 'Accept': 'application/json' }
+        });
 
-          if (response.ok) {
-            sentMessage.style.display = 'block';
-            sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
-            form.reset();
-          } else {
-            errorMessage.textContent = "Oops! There was a problem submitting your form.";
-            errorMessage.style.display = 'block';
-          }
-        } catch (error) {
-          loading.style.display = 'none';
-          errorMessage.textContent = "Network error — please try again later.";
+        loading.style.display = 'none';
+
+        if (response.ok) {
+          sentMessage.style.display = 'block';
+          sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
+          form.reset();
+        } else {
+          errorMessage.textContent = "Oops! There was a problem submitting your form.";
           errorMessage.style.display = 'block';
         }
-      });
+      } catch (error) {
+        loading.style.display = 'none';
+        errorMessage.textContent = "Network error — please try again later.";
+        errorMessage.style.display = 'block';
+      }
     });
-  </script>
+  });
+</script>
 
 </body>
 
