SEO and Metadata Updates - 10.14.25

--- a/index.html
+++ b/index.html
@@ -14,9 +14,36 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
-  <title>SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+<!-- ======== SEO + SOCIAL META TAGS ======== -->
+
+<title>SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER</title>
+<meta name="description" content="Sasha Cheek — Technical Program Manager, API integration specialist, and science writer. Explore my portfolio of technical projects, data visualizations, and published writing.">
+<meta name="keywords" content="Sasha Cheek, API Integration, Technical Program Manager, Science Writer, Data Visualization, Tech Portfolio, Systems Integration, Technical Consulting, Science Communication, Cyberpunk Portfolio">
+<meta name="author" content="Sasha Cheek">
+
+<!-- Open Graph (Facebook, LinkedIn, etc.) -->
+<meta property="og:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
+<meta property="og:description" content="Explore my work in API integration, tech consulting, and science communication.">
+<meta property="og:image" content="https://sashacheek.com/assets/img/preview-card.png">
+<meta property="og:url" content="https://sashacheek.com">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
+<meta name="twitter:description" content="Explore my portfolio in technical systems and science writing.">
+<meta name="twitter:image" content="https://sashacheek.com/assets/img/preview-card.png">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://sashacheek.com/">
+
+<!-- Robots + Indexing -->
+<meta name="robots" content="index, follow">
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="assets/img/favicon.png">
+
+<!-- ======== END SEO + SOCIAL ======== -->
 
   <!-- Bootstrap & Animate.css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
