--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <meta name="robots" content="index, follow">
 
 <!-- Favicon -->
+
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
 <!-- ======== END SEO + SOCIAL ======== -->
@@ -52,6 +53,11 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
